Finished timestamp removal