@@ -98,10 +98,10 @@ class QueryExecutorTest {
 
         // Mock unigram iterator to provide a universe for NOT tests
         // Let's define a universe of documents {1, 2, 3, 4}
-        PositionList posListDoc1 = new PositionList(); posListDoc1.add(new Position(1, 0, 0, 1, LocalDate.now()));
-        PositionList posListDoc2 = new PositionList(); posListDoc2.add(new Position(2, 0, 0, 1, LocalDate.now()));
-        PositionList posListDoc3 = new PositionList(); posListDoc3.add(new Position(3, 0, 0, 1, LocalDate.now()));
-        PositionList posListDoc4 = new PositionList(); posListDoc4.add(new Position(4, 0, 0, 1, LocalDate.now()));
+        PositionList posListDoc1 = new PositionList(); posListDoc1.add(new Position(1, 0, 0, 1));
+        PositionList posListDoc2 = new PositionList(); posListDoc2.add(new Position(2, 0, 0, 1));
+        PositionList posListDoc3 = new PositionList(); posListDoc3.add(new Position(3, 0, 0, 1));
+        PositionList posListDoc4 = new PositionList(); posListDoc4.add(new Position(4, 0, 0, 1));
         
         // Create mock entries for the iterator
         Map.Entry<byte[], byte[]> entry1 = Map.entry("key1".getBytes(), posListDoc1.serialize());
@@ -121,18 +121,18 @@ class QueryExecutorTest {
     private void setupMockData() throws IndexAccessException {
         // Setup test data for "test" word
         PositionList testPositions = new PositionList();
-        testPositions.add(new Position(1, 1, 0, 5, LocalDate.now()));
-        testPositions.add(new Position(2, 1, 0, 5, LocalDate.now()));
+        testPositions.add(new Position(1, 1, 0, 5));
+        testPositions.add(new Position(2, 1, 0, 5));
         
         // Setup test data for "example" word
         PositionList examplePositions = new PositionList();
-        examplePositions.add(new Position(2, 1, 10, 15, LocalDate.now()));
-        examplePositions.add(new Position(3, 1, 10, 15, LocalDate.now()));
+        examplePositions.add(new Position(2, 1, 10, 15));
+        examplePositions.add(new Position(3, 1, 10, 15));
         
         // Setup test data for PERSON NER
         PositionList nerPositions = new PositionList();
-        nerPositions.add(new Position(2, 1, 10, 15, LocalDate.now()));
-        nerPositions.add(new Position(3, 1, 10, 15, LocalDate.now()));
+        nerPositions.add(new Position(2, 1, 10, 15));
+        nerPositions.add(new Position(3, 1, 10, 15));
         
         // Mock index responses with lenient mode to avoid unnecessary stubbing exceptions
         lenient().when(unigramIndex.get("test".getBytes())).thenReturn(Optional.of(testPositions));
@@ -148,20 +148,20 @@ class QueryExecutorTest {
     // Helper method to create simple MatchDetail
     private MatchDetail createMatchDetail(int docId, int sentenceId, String value) {
          // Create a placeholder position
-        Position pos = new Position(docId, sentenceId, 0, value.length(), LocalDate.now());
+        Position pos = new Position(docId, sentenceId, 0, value.length());
         // Use the 5-argument constructor with null for variableName
         return new MatchDetail(value, ValueType.TERM, pos, (String) null);
     }
      private MatchDetail createMatchDetail(int docId, String value) {
          // Create a placeholder position for document level
-        Position pos = new Position(docId, -1, 0, value.length(), LocalDate.now());
+        Position pos = new Position(docId, -1, 0, value.length());
         // Use the 5-argument constructor with null for variableName
         return new MatchDetail(value, ValueType.TERM, pos, (String) null);
     }
 
     // Helper to create MatchDetail with a specific LocalDate value for a key
     private MatchDetail createMatchDetailWithDate(int docId, int sentenceId, String keyNameForDate, LocalDate date, String alias) {
-        Position pos = new Position(docId, sentenceId, 0, 5, date); // Assuming some length and using date as timestamp
+        Position pos = new Position(docId, sentenceId, 0, 5); // Assuming some length and using date as timestamp
         // Store the date as the value, and keyNameForDate in the variableName for easy extraction in mocks/tests if needed.
         // Actual MatchDetail from NerDateIndex would have the date as part of its structured value or specific field.
         // For testing JoinHandler.extractValueForKey, it expects the key to match a variable or structural key.
@@ -173,7 +173,7 @@ class QueryExecutorTest {
     }
 
     private MatchDetail createMatchDetailWithDate(int docId, String keyNameForDate, LocalDate date, String alias) {
-        Position pos = new Position(docId, -1, 0, 5, date); // Document level
+        Position pos = new Position(docId, -1, 0, 5); // Document level
         String mockVariableName = alias != null ? alias + "." + keyNameForDate : keyNameForDate;
         return new MatchDetail(date, ValueType.DATE, pos, Optional.of(mockVariableName));
     }
@@ -482,8 +482,8 @@ class QueryExecutorTest {
         JoinCondition joinCondition = JoinCondition.createEqualityJoin("leftAlias.custom_key", "rightAlias.custom_key", JoinCondition.JoinType.INNER);
         Query mainQuery = new Query("mainSource", Collections.emptyList(), Collections.emptyList(), Optional.empty(), Query.Granularity.DOCUMENT, Optional.empty(), Collections.emptyList(), new com.example.query.binding.VariableRegistry(), Arrays.asList(subquerySpecLeft, subquerySpecRight), Optional.of(joinCondition), Optional.empty(), List.of());
         // Create MatchDetails with a custom variable name
-        MatchDetail leftDetail = new MatchDetail("foo", ValueType.TERM, new Position(1, -1, 0, 3, java.time.LocalDate.now()), "leftAlias.custom_key");
-        MatchDetail rightDetail = new MatchDetail("foo", ValueType.TERM, new Position(2, -1, 0, 3, java.time.LocalDate.now()), "rightAlias.custom_key");
+        MatchDetail leftDetail = new MatchDetail("foo", ValueType.TERM, new Position(1, -1, 0, 3), "leftAlias.custom_key");
+        MatchDetail rightDetail = new MatchDetail("foo", ValueType.TERM, new Position(2, -1, 0, 3), "rightAlias.custom_key");
         QueryResult mockLeftResult = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(leftDetail));
         QueryResult mockRightResult = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(rightDetail));
         ContainsExecutor mockContainsExecutor = mock(ContainsExecutor.class);
@@ -526,20 +526,20 @@ class QueryExecutorTest {
 
         // Setup Mock Executors
         QueryResult containsResult = new QueryResult(Query.Granularity.DOCUMENT, List.of(
-            new MatchDetail("term", ValueType.TERM, new Position(1, 1, 0, 4, LocalDate.now()), Optional.empty()),
-            new MatchDetail("term", ValueType.TERM, new Position(2, 1, 0, 4, LocalDate.now()), Optional.empty())
+            new MatchDetail("term", ValueType.TERM, new Position(1, 1, 0, 4), Optional.empty()),
+            new MatchDetail("term", ValueType.TERM, new Position(2, 1, 0, 4), Optional.empty())
         ));
         QueryResult nerResult = new QueryResult(Query.Granularity.DOCUMENT, List.of(
-            new MatchDetail("Alice", ValueType.ENTITY, new Position(1, 2, 10, 15, LocalDate.now()), Optional.empty()),
-            new MatchDetail("Bob", ValueType.ENTITY, new Position(3, 1, 5, 8, LocalDate.now()), Optional.empty())
+            new MatchDetail("Alice", ValueType.ENTITY, new Position(1, 2, 10, 15), Optional.empty()),
+            new MatchDetail("Bob", ValueType.ENTITY, new Position(3, 1, 5, 8), Optional.empty())
         ));
         
         // Mock LogicalExecutor behavior (intersection/AND)
         LogicalExecutor logicalExecutor = mock(LogicalExecutor.class);
         QueryResult combinedResult = new QueryResult(Query.Granularity.DOCUMENT, List.of(
             // Assume only doc 1 matches both Contains and Ner
-             new MatchDetail("term", ValueType.TERM, new Position(1, 1, 0, 4, LocalDate.now()), Optional.empty()),
-             new MatchDetail("Alice", ValueType.ENTITY, new Position(1, 2, 10, 15, LocalDate.now()), Optional.empty())
+             new MatchDetail("term", ValueType.TERM, new Position(1, 1, 0, 4), Optional.empty()),
+             new MatchDetail("Alice", ValueType.ENTITY, new Position(1, 2, 10, 15), Optional.empty())
         ));
         
         // Explicitly tell the factory what to return for each condition type
@@ -568,25 +568,19 @@ class QueryExecutorTest {
     // --- Temporal Join Integration Tests ---
 
     // Helper to create MatchDetail with LocalDate value for temporal joins
-    private MatchDetail createTemporalMatchDetail(int docId, int sentenceId, LocalDate date, String alias) {
-        Position pos = new Position(docId, sentenceId, 0, 0, date);
-        // Value is the LocalDate, type is DATE, variable name has alias prefix
-        return new MatchDetail(date, ValueType.DATE, pos, Optional.of(alias + ".date"));
+    private MatchDetail createTemporalMatchDetail(int docId, int sentenceId, LocalDate date, String variableNameToBind) {
+        Position pos = new Position(docId, sentenceId, 0, 5);
+        return new MatchDetail(date, ValueType.DATE, pos, Optional.ofNullable(variableNameToBind));
     }
 
     @Test
     void testTemporalJoinBefore() throws QueryExecutionException {
         // Query: SELECT * FROM source q1 JOIN source q2 ON q1.date BEFORE q2.date
         String source = "temporal_source";
-        // Use a valid Temporal constructor *with distinct variables* for dummy conditions
-        // Temporal cond1 = new Temporal(TemporalPredicate.CONTAINS, LocalDate.of(2023, 1, 1).atStartOfDay(), Optional.empty(), "q1.date"); // Correct constructor
-        // Temporal cond2 = new Temporal(TemporalPredicate.CONTAINS, LocalDate.of(2023, 1, 1).atStartOfDay(), Optional.empty(), "q2.date"); // Correct constructor
         LocalDateTime dummyDate = LocalDate.of(2023, 1, 1).atStartOfDay();
-        // Use canonical constructor with required Optionals for CONTAINS
         Temporal cond1 = new Temporal(Optional.of(dummyDate), Optional.of(dummyDate), Optional.of("q1.date"), Optional.empty(), TemporalPredicate.CONTAINS);
         Temporal cond2 = new Temporal(Optional.of(dummyDate), Optional.of(dummyDate), Optional.of("q2.date"), Optional.empty(), TemporalPredicate.CONTAINS);
 
-        // Correct SubquerySpec constructor order: Query, alias
         SubquerySpec sub1 = new SubquerySpec(new Query(source, List.of(cond1)), "q1");
         SubquerySpec sub2 = new SubquerySpec(new Query(source, List.of(cond2)), "q2");
 
@@ -594,7 +588,6 @@ class QueryExecutorTest {
             "q1.date", "q2.date", JoinType.INNER, TemporalPredicate.BEFORE
         );
 
-        // Use the full Query constructor for the main query
         Query mainQuery = new Query(
             source,                       // Source for main query part (can be same)
             Collections.emptyList(),      // No main conditions
@@ -611,29 +604,23 @@ class QueryExecutorTest {
         );
 
         // Mock subquery results
-        MatchDetail q1_d1 = createTemporalMatchDetail(1, -1, LocalDate.of(2023, 1, 10), "q1");
-        MatchDetail q1_d2 = createTemporalMatchDetail(2, -1, LocalDate.of(2023, 1, 15), "q1");
+        MatchDetail q1_d1 = createTemporalMatchDetail(1, -1, LocalDate.of(2023, 1, 10), "q1.date");
+        MatchDetail q1_d2 = createTemporalMatchDetail(2, -1, LocalDate.of(2023, 1, 15), "q1.date");
         QueryResult q1Result = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(q1_d1, q1_d2));
 
-        MatchDetail q2_d3 = createTemporalMatchDetail(3, -1, LocalDate.of(2023, 1, 12), "q2");
-        MatchDetail q2_d4 = createTemporalMatchDetail(4, -1, LocalDate.of(2023, 1, 20), "q2");
+        MatchDetail q2_d3 = createTemporalMatchDetail(3, -1, LocalDate.of(2023, 1, 12), "q2.date");
+        MatchDetail q2_d4 = createTemporalMatchDetail(4, -1, LocalDate.of(2023, 1, 20), "q2.date");
         QueryResult q2Result = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(q2_d3, q2_d4));
 
-        // Mock the TemporalExecutor results for each subquery execution
-        // Use lenient() because the order might vary based on internal QueryExecutor logic
         lenient().when(temporalExecutor.execute(eq(cond1), eq(indexes), any(), anyInt(), eq(source))).thenReturn(q1Result);
         lenient().when(temporalExecutor.execute(eq(cond2), eq(indexes), any(), anyInt(), eq(source))).thenReturn(q2Result);
 
-        // Execute the main query
         Object result = queryExecutor.execute(mainQuery, indexes);
 
-        // Verify the result is a List<JoinedMatch>
         assertTrue(result instanceof List, "Result should be a List");
         @SuppressWarnings("unchecked")
         List<JoinedMatch> joinedMatches = (List<JoinedMatch>) result;
 
-        // Assertions: Expect 3 pairs where q1.date < q2.date
-        // (q1_d1, q2_d3), (q1_d1, q2_d4), (q1_d2, q2_d4)
         assertEquals(3, joinedMatches.size(), "Expected 3 joined pairs for BEFORE");
         Set<JoinedMatch> resultSet = Set.copyOf(joinedMatches);
         assertTrue(resultSet.contains(new JoinedMatch(q1_d1, q2_d3)), "Missing pair: q1_d1 < q2_d3");
@@ -643,17 +630,11 @@ class QueryExecutorTest {
 
     @Test
     void testTemporalJoinAfter() throws QueryExecutionException {
-        // Query: SELECT * FROM source q1 JOIN source q2 ON q1.date AFTER q2.date
         String source = "temporal_source";
-        // Use a valid Temporal constructor *with distinct variables* for dummy conditions
-        // Temporal cond1 = new Temporal(TemporalPredicate.CONTAINS, LocalDate.of(2023, 1, 1).atStartOfDay(), Optional.empty(), "q1.date"); // Correct constructor
-        // Temporal cond2 = new Temporal(TemporalPredicate.CONTAINS, LocalDate.of(2023, 1, 1).atStartOfDay(), Optional.empty(), "q2.date"); // Correct constructor
         LocalDateTime dummyDate = LocalDate.of(2023, 1, 1).atStartOfDay();
-        // Use canonical constructor with required Optionals for CONTAINS
         Temporal cond1 = new Temporal(Optional.of(dummyDate), Optional.of(dummyDate), Optional.of("q1.date"), Optional.empty(), TemporalPredicate.CONTAINS);
         Temporal cond2 = new Temporal(Optional.of(dummyDate), Optional.of(dummyDate), Optional.of("q2.date"), Optional.empty(), TemporalPredicate.CONTAINS);
 
-        // Correct SubquerySpec constructor order: Query, alias
         SubquerySpec sub1 = new SubquerySpec(new Query(source, List.of(cond1)), "q1");
         SubquerySpec sub2 = new SubquerySpec(new Query(source, List.of(cond2)), "q2");
 
@@ -661,45 +642,38 @@ class QueryExecutorTest {
             "q1.date", "q2.date", JoinType.INNER, TemporalPredicate.AFTER
         );
 
-        // Use the full Query constructor for the main query
         Query mainQuery = new Query(
-            source,                       // Source for main query part
-            Collections.emptyList(),      // No main conditions
-            Collections.emptyList(),      // No ORDER BY
-            Optional.empty(),             // No LIMIT
-            Query.Granularity.DOCUMENT,   // Granularity
-            Optional.empty(),             // No granularity size
-            Collections.emptyList(),      // No explicit SELECT (implies *)
-            new VariableRegistry(),       // Default empty registry
-            List.of(sub1, sub2),          // Subqueries
-            Optional.of(joinCond),        // Join condition
-            Optional.empty(),              // No explicit main alias
-            List.of()                     // groupByColumns
+            source,                      
+            Collections.emptyList(),      
+            Collections.emptyList(),      
+            Optional.empty(),             
+            Query.Granularity.DOCUMENT,   
+            Optional.empty(),             
+            Collections.emptyList(),      
+            new VariableRegistry(),       
+            List.of(sub1, sub2),          
+            Optional.of(joinCond),        
+            Optional.empty(),              
+            List.of()                     
         );
 
-        // Mock subquery results
-        MatchDetail q1_d1 = createTemporalMatchDetail(1, -1, LocalDate.of(2023, 1, 15), "q1");
-        MatchDetail q1_d2 = createTemporalMatchDetail(2, -1, LocalDate.of(2023, 1, 25), "q1");
+        MatchDetail q1_d1 = createTemporalMatchDetail(1, -1, LocalDate.of(2023, 1, 15), "q1.date");
+        MatchDetail q1_d2 = createTemporalMatchDetail(2, -1, LocalDate.of(2023, 1, 25), "q1.date");
         QueryResult q1Result = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(q1_d1, q1_d2));
 
-        MatchDetail q2_d3 = createTemporalMatchDetail(3, -1, LocalDate.of(2023, 1, 10), "q2");
-        MatchDetail q2_d4 = createTemporalMatchDetail(4, -1, LocalDate.of(2023, 1, 20), "q2");
+        MatchDetail q2_d3 = createTemporalMatchDetail(3, -1, LocalDate.of(2023, 1, 10), "q2.date");
+        MatchDetail q2_d4 = createTemporalMatchDetail(4, -1, LocalDate.of(2023, 1, 20), "q2.date");
         QueryResult q2Result = createMockQueryResult(Query.Granularity.DOCUMENT, 0, List.of(q2_d3, q2_d4));
 
-        // Mock the TemporalExecutor results
         lenient().when(temporalExecutor.execute(eq(cond1), eq(indexes), any(), anyInt(), eq(source))).thenReturn(q1Result);
         lenient().when(temporalExecutor.execute(eq(cond2), eq(indexes), any(), anyInt(), eq(source))).thenReturn(q2Result);
 
-        // Execute the main query
         Object result = queryExecutor.execute(mainQuery, indexes);
 
-        // Verify the result
         assertTrue(result instanceof List, "Result should be a List");
         @SuppressWarnings("unchecked")
         List<JoinedMatch> joinedMatches = (List<JoinedMatch>) result;
 
-        // Assertions: Expect 3 pairs where q1.date > q2.date
-        // (q1_d1, q2_d3), (q1_d2, q2_d3), (q1_d2, q2_d4)
         assertEquals(3, joinedMatches.size(), "Expected 3 joined pairs for AFTER");
         Set<JoinedMatch> resultSet = Set.copyOf(joinedMatches);
         assertTrue(resultSet.contains(new JoinedMatch(q1_d1, q2_d3)), "Missing pair: q1_d1 > q2_d3");
